--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -2,7 +2,8 @@
   <div id="error_explanation">
     <div class="alert alert-danger">
       <%= t("errors.messages.not_saved",
-            count: resource.errors.count) %>
+            count: resource.errors.count,
+            resource: resource.class.model_name.human.downcase) %>
     </div>
     <ul>
       <% resource.errors.full_messages.each do |message| %>
