Timebable today and vacation feature

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -191,3 +191,8 @@ img {
   background-color: $accent-color;
   border-color: #4990c0;
 }
+
+.today {
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  border-radius: 0.25rem;
+}
