--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -196,3 +196,13 @@ img {
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
   border-radius: 0.25rem;
 }
+
+form {
+  margin: 20px 0;
+}
+
+.lesson_delete {
+  position: absolute;
+  display: none;
+  width: 100%;
+}
