--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Resend confirmation instructions') %>
+<% provide(:title, t('Resend confirmation instructions')) %>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -11,7 +11,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Resend confirmation instructions", class: 'btn btn-primary' %>
+    <%= f.submit t("Resend confirmation instructions"), class: 'btn btn-primary' %>
   </div>
 <% end %>
 
