--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Sign up') %>
+<% provide(:title, t('Sign up')) %>
 
 <br>
 
@@ -8,14 +8,14 @@
   <div class="form-group row">
     <%= f.label :first_name, class:"col-sm-3 col-form-label" %>
     <div class="col-sm-9">
-      <%= f.text_field :first_name, autofocus: true, class: 'form-control', placeholder: "First Name"%>
+      <%= f.text_field :first_name, autofocus: true, class: 'form-control', placeholder: t("First name")%>
     </div>
   </div>
 
   <div class="form-group row">
     <%= f.label :last_name, class:"col-sm-3 col-form-label"  %>
     <div class="col-sm-9">
-      <%= f.text_field :last_name, class: 'form-control', placeholder: "Last Name" %>
+      <%= f.text_field :last_name, class: 'form-control', placeholder: t("Last name") %>
     </div>
   </div>
 
@@ -23,7 +23,7 @@
     <%= f.label :date_of_birth, class:"col-sm-3 col-form-label" %>
       <div class="col-sm-9">
       <%= f.date_select :date_of_birth, {order: [:day, :month, :year],
-                                         prompt: { day: 'Select day', month: 'Select month', year: 'Select year' },
+                                         prompt: { day: t('Select day'), month: t('Select month'), year: t('Select year') },
                                          start_year: Date.today.year - 5, end_year: Date.today.year - 100}, class: 'custom-select col-sm-3' %>
     </div>
   </div>
@@ -38,7 +38,7 @@
   <div class="form-group row">
     <%= f.label :preferred_language, class:"col-sm-3 col-form-label" %>
     <div class="col-sm-9">
-      <%= f.select :preferred_language, %w(Romanian Russian English), {}, class: 'custom-select' %>
+      <%= f.select :preferred_language, [[t('Romanian'), 'Romanian'], [t('Russian'), 'Russian'], [t('English'), 'English']], {}, class: 'custom-select' %>
     </div>
   </div>
 
@@ -52,20 +52,20 @@
   <div class="form-group row">
     <%= f.label :password, class:"col-sm-3 col-form-label" %>
     <div class="col-sm-9">
-      <%= f.password_field :password, class: 'form-control', placeholder: "Password", autocomplete: "new-password" %>
+      <%= f.password_field :password, class: 'form-control', placeholder: t("Password"), autocomplete: "new-password" %>
     </div>
   </div>
 
   <div class="form-group row">
     <%= f.label :password_confirmation, class:"col-sm-3 col-form-label" %>
     <div class="col-sm-9">
-      <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Password Confirmation",
+      <%= f.password_field :password_confirmation, class: 'form-control', placeholder: t("Password confirmation"),
                            autocomplete: "new-password" %>
     </div>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up", class: 'btn btn-primary'%>
+    <%= f.submit t("Sign up"), class: 'btn btn-primary'%>
   </div>
 <% end %>
 <br>
