--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,24 +1,7 @@
 <% provide(:title, @post.title) %>
 
 <div class="row">
-  <div class="col-sm-4 sidebar">
-    <button type="button" class="btn btn-primary">
-      Notifications <span class="badge badge-light"><%= current_user.notifications.count %></span>
-    </button>
-    <% if current_user.has_role? :admin %>
-      <%= render 'admin_aside' %>
-    <% end %>
-    <% if current_user.has_role? :teacher %>
-      <%= render 'teacher_aside' %>
-    <% end %>
-    <% if (current_user.has_role? :parent) && current_user.has_confirmed_children? %>
-      <%= render 'parent_aside' %>
-    <% end %>
-    <% if current_user.has_role? :student %>
-      <%= render 'student_aside' %>
-    <% end %>
-    <h5 class="title"><%= link_to t("Timetable"), timetable_path %></h5>
-  </div>
+  <%= render 'shared/aside' %>
   <div class="col-sm-8">
     <%=image_tag @post.image.url, class: 'img-fluid', style: 'height: auto; width: 100%; display: block;' if @post.image? %>
     <br>
