--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -9,7 +9,19 @@ $strip-color: #2E2F30;
 body{
   font-family: 'Roboto Slab', serif;
   font-weight: 300;
-  color: $text-color
+  color: $text-color;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#big-container {
+  min-height: 100%;
+  position: relative;
+}
+
+#content {
+  padding-bottom: 74px;
 }
 
 .navbar {
@@ -30,7 +42,23 @@ body{
   left: inherit;
 }
 
+@media only screen and (max-width: 992px) {
+  #content {
+    padding-bottom: 74px;
+  }
+  footer {
+    height: 74px;
+  }
+}
+
+
 @media only screen and (max-width: 770px) {
+  #content {
+    padding-bottom: 90px;
+  }
+  footer {
+    height: 90px;
+  }
   .navbar {
     padding-bottom: 0.5rem;
     text-align: center;
@@ -56,6 +84,10 @@ h2 {
 }
 
 footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 74px;
   background-color: $strip-color;
   margin-top: 45px;
   padding-top: 10px;
@@ -173,7 +205,11 @@ table {
 }
 
 @media only screen and (max-width: 575px) {
+  #content {
+    padding-bottom: 114px;
+  }
   footer {
+    height: 114px;
     ul {
       display: table;
       padding: 0;
@@ -225,4 +261,12 @@ form {
 
 .bold {
   font-weight: bold;
+}
+
+.debug_dump {
+  margin: 0;
+}
+
+.carousel {
+  margin-bottom: 20px;
 }
