--- a/app/views/layouts/home_layout.html.erb
+++ b/app/views/layouts/home_layout.html.erb
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
   <title><%= full_title(yield(:title)) %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag    'application', media: 'all',
-                             'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'application', media: 'all',
+                          'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= favicon_link_tag asset_path('logo.ico') %>
 </head>
 <body>
+<div id="big-container">
   <%= render 'layouts/header' %>
-  <% if yield(:title).present? %>
-    <div class="inner-headline">
-      <div class="container">
-        <h2><%= yield(:title) %></h2>
+  <div id="content">
+    <% if yield(:title).present? %>
+      <div class="inner-headline">
+        <div class="container">
+          <h2><%= yield(:title) %></h2>
+        </div>
       </div>
-    </div>
-    <br>
-  <% end %>
-  <%= render 'shared/alerts' %>
-  <%= yield %>
+      <br>
+    <% end %>
+    <%= render 'shared/alerts' %>
+    <%= yield %>
+  </div>
   <%= render 'layouts/footer' %>
   <div class="container">
     <%= debug(params) if Rails.env.development? %>
   </div>
+</div>
 </body>
 </html>
