--- a/app/views/pages/about.ro.html.erb
+++ b/app/views/pages/about.ro.html.erb
@@ -1,1 +1,56 @@
-fsdfxc
+<% provide(:title, t('About')) %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8">
+      <p>
+        <b>INTERNATIONAL STUDY CENTRE for EDUCATIONAL OPPORTUNITIES (ISCEO)</b> este un centru educaţional care le
+        oferă tuturor celor interesaţi de dezvoltarea personală, atît din perspectiva competenţelor academice, cît şi
+        cea a abilităţilor socio-emoţionale, şansa de a trăi experienţa lucrului în tandem al Limbilor străine şi
+        Psihologiei.
+      </p>
+      <p>
+        Activitatea pe care o desfăşurăm îşi are începutul în anul 2004, cînd, în premieră pentru Republica Moldova,
+        o echipă de profesori bine pregătiţi, specializaţi în predarea limbii engleze şi psihologie, cu stagii în şcoli
+        din Marea Britanie şi SUA, au organizat o şcoală de vară de tip britanic. Acest proiect unic, întitulat
+        "Opportunities for Everyone", a îmbinat cu iscusinţă odihna, distracţia şi instruirea. Interacţiunea a trei
+        programe: distractiv, instructiv şi educativ s-a realizat în conformitate cu principiul "îmbinării plăcutului
+        cu utilul". Timp de patru ani succesivi (2004-2007) echipa noastră a dăscălit 478 de copii, pentru ca în 2008,
+        la dorinţa discipolilor noştri, să organizăm prima călătorie în Marea Britanie.
+      </p>
+    </div>
+    <div class="col-sm-4">
+      insert image
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      insert image
+    </div>
+    <div class="col-sm-8">
+      <p>
+        Următorii cinci ani (2008-2012) au servit drept cinci trepte valoroase în creşterea noastră profesională, care
+        s-au soldat cu stabilirea unor relaţii preţioase de parteneriat cu instituţii educaţionale din Marea Britanie,
+        Europa şi SUA. Din vara anului 2008 suntem reprezentanţi oficiali ai companiei britanice Studio Cambridge în
+        Republica Moldova. Prin urmare, părinţii din ţara noastră stabilesc relaţii cu Studio Cambridge fără
+        intermediari şi, corespunzător, fără cheltuieli suplimentare pentru astfel de servicii. În această perioadă 94
+        de elevi moldoveni s-au delectat cu accentul Britanic delicios, cu calmul şi verdele peisajelor engleze, cu
+        sobrietatea regală a castelelor medievale, cu arhitectura măreaţă a oraşelor, cu disciplina şi, totodată,
+        simpleţea şi pozitivismul oamenilor. Mai mult ca atît, avem discipoli care îşi continuă studiile în licee,
+        colegii şi universităţi britanice, europene şi americane.
+      </p>
+      <p>
+        Pe parcurs am obţinut titlul de consultanţi educaţionali pentru King's School Ely, Cambridge Centre for Six-Form
+        Studies, Cambridge Academy of English, Bellerbys College, CATS College, International Projects, Actilingua
+        Academy. În anul 2013, an ce a marcat aniversarea a zecea a activităţii noastre, am oferit noi oportunităţi
+        educaţionale (şcoli de weekend, cursuri personalizate de studiere a limbii engleze atît pentru copii cît şi
+        pentru adulţi) de rînd cu cele în desfăşurare (şcolile de vacanţă în Republica Moldova şi Regatul Unit). În
+        premieră, Centrul Internaţional de Oportunităţi Educaţionale în parteneriat cu Studio Cambridge a lansat
+        concursul naţional "English Skills Championship" (ESC) continuat în 2014 în parteneriat cu King's School Ely.
+        În cadrul acestuia, cîştigătorii premiului întîi obţin burse de studiu la Şcoli de Vară din Marea Britanie. Cum
+        am obişnuit, oferim continuitate şi calitate în materie de pregătire pentru viaţă a elevilor noştri.
+      </p>
+    </div>
+  </div>
+</div>
+
