--- a/app/views/pages/home.en.html.erb
+++ b/app/views/pages/home.en.html.erb
@@ -28,25 +28,24 @@
   <div class="row">
     <div class="col-sm-8">
       <p>
-        <b>International Study Centre for Educational Opportunities (ISCEO)</b> este un centru educaţional care le
-        oferă tuturor celor interesaţi de dezvoltarea personală şansa de a trăi experienţa lucrului în tandem al
-        Limbilor străine cu Psihologia.
+        <b>International Study Centre for Educational Opportunities (ISCEO)</b> is an educational centre that offers the
+        chance to experience Foreign languages working together with Psychology to everyone interested in it personal
+        development.
       </p>
       <p>
-        Învăţarea unei limbi străine este un adevărat eveniment social, diferit de învăţarea oricărei alte discipline
-        şcolare, deoarece limba aparţine laturii sociale a fiinţei umane şi ea este parte a identităţii acesteia.
-        Învăţarea limbii străine implică mult mai multe decît doar abilităţi de învăţare sau sistem de reguli, ori
-        gramatică; ea implică o schimbare a imaginii de sine, adoptarea unor comportamente noi din punct de vedere
-        social şi cultural, a unor feluri de a fi şi de aceea impactul ei asupra laturii sociale a personalităţii
-        (indiferent de vîrstă) este foarte semnificativ.
+        Learning a foreign language can be considered to be a social event, different from any other school subject,
+        because a language belongs to the social part of the human nature, it is part of a human's identity. Studying a
+        foreign language involves a lot more than just someone's ability to learn and understand a set of well defined
+        rules, or it's grammar; it involves a change in one's perception of themselves, adopting a new behavior from the
+        social and cultural point of view and that's why its impact on your life's social aspect and on your personality
+        (regardless of age) is very significant.
       </p>
       <p>
-        Suntem bucuroşi să Vă împărtăşim ceea ce cunoaştem pentru a Vă ajuta să deveniţi ceea ce aţi fi, astfel încît,
-        asemeni <a href="https://valydo.files.wordpress.com/2008/01/pescarusul-jonathan-livingstone.pdf"> pescăruşului
-        lui Richard Bach</a>, să puteţi să Vă ridicaţi deasupra mulţimii, valorificîndu-Vă la maxim potenţialul cu care
-        sunteţi înzestraţi, fiindcă dintre toate adevărurile minunate referitoare la suflet care au fost regăsite şi
-        scoase la lumină de către marii gînditori ai secolului 20, nici unul nu e mai îmbucurător sau mai plin de
-        promisiuni divine şi încredere decît acesta:
+        We are happy to share what we know to help You become what You can be, so that just like
+        <a href="https://valydo.files.wordpress.com/2008/01/pescarusul-jonathan-livingstone.pdf">Richard Bach's seagull</a>
+        You can raise over the crowd, harnessing all your potential, because out of all the amazing truths regarding a
+        human's soul that were developed and expressed by the great thinkers of the 20<sup>th</sup> century, none is more
+        gratifying that this one:
       </p>
     </div>
     <div class="col-sm-4">
@@ -56,10 +55,8 @@
   <div class="row col-sm-12">
     <blockquote class="blockquote text-right">
       <p class="mb-0">
-        Omul e stăpînul gîndirii, modelatorul caracterului, făcătorul şi modelatorul situaţiilor, mediului şi
-        destinului. Ca fiinţă a Puterii, Inteligenţei şi Iubirii şi stăpîn al propriilor gînduri, omul deţine cheia
-        oricărei situaţii şi are în sine acea forţă transformatoare şi regeneratoare prin care face din el însuşi ceea
-        ce vrea.
+        Man is made or unmade by himself. By the right choice he ascends. As a being of power, intelligence, and love,
+        and the lord of his own thoughts, he holds the key to every situation.
       </p>
       <div class="blockquote-footer">James Allen (1864-1912)</div>
     </blockquote>
