--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -21,7 +21,7 @@ body{
 }
 
 #content {
-  padding-bottom: 74px;
+  padding-bottom: 84px;
 }
 
 .navbar {
@@ -42,23 +42,7 @@ body{
   left: inherit;
 }
 
-@media only screen and (max-width: 992px) {
-  #content {
-    padding-bottom: 74px;
-  }
-  footer {
-    height: 74px;
-  }
-}
-
-
-@media only screen and (max-width: 770px) {
-  #content {
-    padding-bottom: 90px;
-  }
-  footer {
-    height: 90px;
-  }
+@media only screen and (max-width: 767px) {
   .navbar {
     padding-bottom: 0.5rem;
     text-align: center;
@@ -83,11 +67,15 @@ h2 {
   font-size: 42px;
 }
 
+#content {
+  padding-bottom: 100px;
+}
+
 footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 74px;
+  height: 90px;
   background-color: $strip-color;
   margin-top: 45px;
   padding-top: 10px;
@@ -206,7 +194,7 @@ table {
 
 @media only screen and (max-width: 575px) {
   #content {
-    padding-bottom: 114px;
+    padding-bottom: 124px;
   }
   footer {
     height: 114px;
@@ -269,4 +257,13 @@ form {
 
 .carousel {
   margin-bottom: 20px;
+}
+
+.blockquote {
+  font-style: italic;
+  font-size: 1rem;
+}
+
+b {
+  color: $accent-color;
 }
