--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Edit post') %>
+<% provide(:title, t('Edit post')) %>
 
 <%= form_for(@post) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
