Error views fix

--- a/app/views/errors/internal_error.html.erb
+++ b/app/views/errors/internal_error.html.erb
@@ -1,7 +1,9 @@
 <% provide(:title, t('Error') +  ' 500') %>
 
+<br>
+<br>
 <h1><%= t('Looks like something went wrong!') %></h1>
 <br>
 <br>
 <br>
-<h3><%= t("We'll try to fix this problem as soon as possible, but if the problem persists feel free to contact us.")%></h3>
+<h3><%= t("We'll try to fix this problem as soon as possible, but if the problem persists, feel free to contact us")%></h3>
