--- a/app/views/errors/unacceptable.html.erb
+++ b/app/views/errors/unacceptable.html.erb
@@ -1,7 +1,9 @@
 <% provide(:title, t('Error') +  ' 422') %>
 
-<h1><%= t('The change you wanted was rejected') %></h1>
+<br>
+<br>
+<h1><%= t('The change you wanted was rejected!') %></h1>
 <br>
 <br>
 <br>
-<h3><%= t("Maybe you tried to change something you didn't have access to.")%></h3>
+<h3><%= t("Maybe you tried to change something you didn't have access to")%></h3>
